# scheffe_wald_test

./: README.md  df_penalties_all_test.csv  multiple_comparison_tests.py  pyproject.toml  test_results.csv  visualization.py
MultipleTesting/: multiple_comparisons.py  penalty_visualizations.py  visualization.py
penalty_analysis/: implementation.ipynb  implementation.md  implementation.tex  penalty_analysis.py
penalty_analysis/data/: Final_Adjusted_Subject_Count_Table.csv  Final_Adjusted_Subject_Count_Table.csvZone.Identifier  Modified_dt_penalty.csv  Modified_dt_penalty.csvZone.Identifier  Updated_Subject_Count_Table.csvZone.Identifier  base_comparaciones_mult_completa.csv  base_dt.csv  base_penalty_complete.csv  dt_compMult_formula_182.csv  dt_penalty.csv
scheffewald/: visualization.py
