[tool.poetry]
name = "tesis"
version = "0.1.0"
description = "Code for a Scheffe-Wald test for multiple comparisons in a multinomial distribution"
authors = ["Sharon Lizzet Trejo Luna <sharont.luna@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
matplotlib = "^3.9.2"
numpy = "^2.1.3"
pandas = "^2.2.3"
scipy = "^1.14.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
